Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.913 devel

**    Added new examples/ directory with appropriate examples. This replaces the
      old test_c and test_sc directories.

***   Add --getenv option.

****  The internal test_verilated test directory is moved to be part of test_regress.

****  Fix Ubuntu 17.10 issues, bug1223 partial. [John Coiner]

****  Fix compiler warning when WIDTH warning ignored on large compare.


* Verilator 3.912 2017-09-23

**    Verilated headers no longer "use namespace std;"
      User's code without "std::" prefixes may need "use namespace std;" to compile.

***   Support or/and/xor array intrinsic methods, bug1210. [Mike Popoloski]

***   Support package export, bug1217. [Usuario Eda]

***   Fix ordering of arrayed cell wide connections, bug1202 partial. [Mike Popoloski]

****  Support module port parameters without defaults, bug 1213. [Mike Popoloski]

****  Add performance information to --stats file.

****  Simplify VL_CONST_W macro generation for faster compiles.

****  Fix LITENDIAN warning on arrayed cells, bug1202. [Mike Popoloski]

****  Fix enum ranges without colons, bug1204. [Mike Popoloski]

****  Fix GCC noreturn compile error, bug1209. [Mike Popoloski]

****  Fix constant function default parameters, bug1211. [Mike Popoloski]

****  Fix non-colon array of interface modports, bug1212. [Mike Popoloski]

****  Fix .name connections on interfaces, bug1214. [Mike Popoloski]

****  Fix wide array indices causing compile error.

****  Better optimize Shift-And, and replication constructs.


* Verilator 3.910 2017-09-07

***   SystemPerl mode (-sp-deprecated) has been removed.

****  Update keyword warnings to include C++11 and others.


* Verilator 3.908 2017-08-28

****  Support x in $readmem, bug1180. [Arthur Kahlich]

****  Support packed struct DPI imports, bug1190. [Rob Stoddard]

****  Fix GCC 6 warnings.
