@@ -11,6 +11,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  The internal test_verilated test directory is moved to be part of test_regress.
 
+****  Fix over-aggressive inlining, bug1223. [John Coiner]
+
 ****  Fix Ubuntu 17.10 issues, bug1223 partial. [John Coiner]
 
 ****  Fix compiler warning when WIDTH warning ignored on large compare.
